[package]
name = "pallet-xcm-handler"
description = "Pallet to handle XCMP intricacies."
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
log = { workspace = true }
serde = { workspace = true }

# Substrate Dependencies

## Substrate Primitive Dependencies
sp-std = { workspace = true }
sp-runtime = { workspace = true }

## Substrate FRAME Dependencies
frame-benchmarking = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# Cumulus dependencies
cumulus-primitives-core = { workspace = true }
cumulus-pallet-xcm = { workspace = true }

# Polkadot Dependencies
polkadot-parachain-primitives = { workspace = true }
staging-xcm = { workspace = true }
staging-xcm-executor = { workspace = true }

[dev-dependencies]

# Substrate
pallet-balances = { workspace = true }
sp-core = { workspace = true }

# Cumulus dependencies
staging-parachain-info = { workspace = true }

# Polkadot Dependencies
polkadot-parachain-primitives = { workspace = true }
pallet-xcm = { workspace = true }
staging-xcm-builder = { workspace = true }
staging-xcm-executor = { workspace = true }

[features]
default = ["std"]
std = [
  "log/std",
  "serde/std",
  "parity-scale-codec/std",
  "cumulus-primitives-core/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "polkadot-parachain-primitives/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
  "staging-xcm/std",
  "staging-xcm-builder/std",
  "staging-xcm-executor/std",
  "cumulus-pallet-xcm/std"
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
